search in models and retrieve all records from db in controllers.py, display all records in template by calling specific fields while looping through array passed in context value

--- a/views/templates.xml
+++ b/views/templates.xml
@@ -1,9 +1,12 @@
 <odoo>
     <data>
 		<template id='list_teachers'>
-			<title>Academy</title>
+			<title>Page Title Here Academy</title>
 			<t t-foreach='teachers' t-as='teacher'>
 				<p> <t t-esc='teacher'/> </p>
+			</t>
+			<t t-foreach='all_teachers' t-as='object'>
+				<p> <t t-esc='object.teacher_name'/> </p>
 			</t>
 		</template>
 
