--- a/views/allteachers.xml
+++ b/views/allteachers.xml
@@ -20,7 +20,15 @@
                 <div class='oe_structure'/>
                 <div class='oe_structure'>
                     <div class='container'>
-                        <h3> <t t-esc='person.teacher_name'/> </h3>
+                        <div class='col-md-6'>
+                            <h3> <t t-esc='person.teacher_name'/> </h3>
+                            <h5> <t t-esc='person.biography'/> </h5>
+                        </div>
+                        <div class='col-md-6'>
+                            <h3 t-field='person.teacher_name'/>
+                            <h5 t-field='person.biography'/>
+                            <p> Last Modified: <i t-field='person.write_date'/> </p>
+                        </div>
                     </div>
                 </div>
 
