add menuitems in xml, and actions record in xml

--- a/views/views.xml
+++ b/views/views.xml
@@ -1,5 +1,15 @@
 <odoo>
   <data>
+    <record id='action_academy_teachers' model='ir.actions.act_window'>
+      <field name='name'>Academy Teachers</field>
+      <field name='res_model'>academy.teachers</field>
+    </record>
+
+    <menuitem sequence='0' id='menu_academy_root' name='Academy'/>
+    <menuitem id='menu_academy_content' parent='menu_academy_root' name='Academy Content'/>
+    <menuitem id='menu_academy_content_teachers' parent='menu_academy_content' action='action_academy_teachers'/>
+
+    
     <!-- explicit list view definition -->
     <!--
     <record model="ir.ui.view" id="academy.list">
