--- a/views/views.xml
+++ b/views/views.xml
@@ -9,7 +9,21 @@
     <menuitem id='menu_academy_content' parent='menu_academy_root' name='Academy Content'/>
     <menuitem id='menu_academy_content_teachers' parent='menu_academy_content' action='action_academy_teachers'/>
 
-    
+    <record id='academy_teacher_form' model='ir.ui.view'>
+      <field name='name'>Academy Teachers: Form</field>
+      <field name='model'>academy.teachers</field>
+      <field name='arch' type='xml'>
+        <form>
+          <sheet>
+            <label for='teacher_name'/> 
+            <field name='teacher_name'/>
+            <label for='biography'/>
+            <field name='biography'/>
+          </sheet>
+        </form>
+      </field>
+    </record>
+
     <!-- explicit list view definition -->
     <!--
     <record model="ir.ui.view" id="academy.list">
