--- a/views/allteachers.xml
+++ b/views/allteachers.xml
@@ -7,8 +7,8 @@
 						<div class='container'>
 							<div class='col-md-6'>
 								<t t-foreach='teachers' t-as='object'>
-									<p> <t t-esc='object.id'/> <t t-esc='object.teacher_name'/> </p>
-									<a t-attf-href='/academy/{{slug(object)}}'> <t t-esc='object.teacher_name'/> </a> 
+									<p> <t t-esc='object.id'/> <t t-esc='object.name'/> </p>
+									<a t-attf-href='/academy/{{slug(object)}}'> <t t-esc='object.name'/> </a> 
 								</t>
 							</div>
 							<div class='col-md-6'>
@@ -16,7 +16,7 @@
 								<ul>
 									<li t-foreach="teachers" t-as="object">
 										<a t-attf-href="#{ root }/objects/#{ object.id }">
-											<t t-esc="object.teacher_name"/>
+											<t t-esc="object.name"/>
 										</a>
 										<dl>
 											<t t-foreach="object._fields" t-as="field">
@@ -41,11 +41,11 @@
 					<div class='oe_structure'>
 						<div class='container'>
 							<div class='col-md-6'>
-									<h3> <t t-esc='person.teacher_name'/> </h3>
+									<h3> <t t-esc='person.name'/> </h3>
 									<h5> <t t-esc='person.biography'/> </h5>
 							</div>
 							<div class='col-md-6'>
-									<h3 t-field='person.teacher_name'/>
+									<h3 t-field='person.name'/>
 									<h5 t-field='person.biography'/>
 									<p> Last Modified: <i t-field='person.write_date'/> </p>
 									<p> Last Modified Long: <i t-field='person.write_date' t-options='{"format": "long"}'/> </p>
