--- a/views/templates.xml
+++ b/views/templates.xml
@@ -7,7 +7,7 @@
 			</t>
             <h1> Array Items from DB Below </h1>
 			<t t-foreach='all_teachers' t-as='object'>
-				<p> <t t-esc ='object.id'/> <t t-esc='object.teacher_name'/> </p>
+				<p> <t t-esc ='object.id'/> <t t-esc='object.name'/> </p>
 			</t>
 		</template>
 
