--- a/views/views.xml
+++ b/views/views.xml
@@ -1,28 +1,90 @@
 <odoo>
   <data>
+    <!-- List Teachers Action Record -->
     <record id='action_academy_teachers' model='ir.actions.act_window'>
       <field name='name'>Academy Teachers</field>
       <field name='res_model'>academy.teachers</field>
+    </record>
+
+    <record id='academy_teacher_tree' model='ir.ui.view'>
+      <field name='name'>Academy Teachers Tree</field>
+      <field name='model'>academy.teachers</field>
+      <field name='arch' type='xml'>
+        <tree string='Teachers'>
+          <field name='name'/>
+        </tree>
+      </field>
     </record>
 
     <menuitem sequence='0' id='menu_academy_root' name='Academy'/>
     <menuitem id='menu_academy_content' parent='menu_academy_root' name='Academy Content'/>
     <menuitem id='menu_academy_content_teachers' parent='menu_academy_content' action='action_academy_teachers'/>
 
+    <!-- Teacher Form View Record -->
     <record id='academy_teacher_form' model='ir.ui.view'>
       <field name='name'>Academy Teachers: Form</field>
       <field name='model'>academy.teachers</field>
       <field name='arch' type='xml'>
         <form>
           <sheet>
-            <label for='teacher_name'/> 
-            <field name='teacher_name'/>
+            <label for='name'/> 
+            <field name='name'/>
+          </sheet>
+          <sheet>
             <label for='biography'/>
             <field name='biography'/>
           </sheet>
         </form>
       </field>
     </record>
+
+    <!-- Courses List Action Record -->
+    <record id='action_academy_courses' model='ir.actions.act_window'>
+      <field name='name'>Academy Courses</field>
+      <field name='res_model'>academy.courses</field>
+    </record>
+
+    <!-- Courses Search View Record -->
+    <record id='academy_courses_search' model='ir.ui.view'>
+      <field name='name'>Academy Courses: Search</field>
+      <field name='model'>academy.courses</field>
+      <field name='arch' type='xml'>
+        <search>
+          <field name='name'/>
+          <field name='teacher_id'/>
+        </search>
+      </field>
+    </record>
+
+    <!-- Course List View Record -->
+    <record id='academy_course_list' model='ir.ui.view'>
+      <field name='name'>Academy Courses: List</field>
+      <field name='model'>academy.courses</field>
+      <field name='arch' type='xml'>
+        <tree string='Courses'>
+          <field name='name'/>
+          <field name='teacher_id'/>
+        </tree>
+      </field>
+    </record>
+
+    <!-- Course Form View Record -->
+    <record id='academy_course_form' model='ir.ui.view'>
+      <field name='name'>Academy Courses Form</field>
+      <field name='model'>academy.courses</field>
+      <field name='arch' type='xml'>
+        <form>
+          <sheet>
+            <label for='name'/>
+            <field name='name'/>
+            <label for='teacher_id'/>
+            <field name='teacher_id'/>
+          </sheet>
+        </form>
+      </field>
+    </record>
+
+    <menuitem id='menu_academy_content_courses' parent='menu_academy_content' action='action_academy_courses'/>
 
     <!-- explicit list view definition -->
     <!--
