--- a/views/views.xml
+++ b/views/views.xml
@@ -80,13 +80,19 @@
       <field name='name'>Academy Courses Form</field>
       <field name='model'>academy.courses</field>
       <field name='arch' type='xml'>
-        <form>
+        <form string='Course Form'>
           <sheet>
-            <label for='name'/>
-            <field name='name'/>
-            <label for='teacher_id'/>
-            <field name='teacher_id'/>
+            <group>
+              <!-- <label for='name'/> -->
+              <field name='name'/>
+              <!-- <label for='teacher_id'/> -->
+              <field name='teacher_id'/>
+            </group>
           </sheet>
+          <div class='oe_chatter'>
+            <field name='message_follower_ids' widget='mail_followers'/>
+            <field name='message_ids' widget='mail_thread'/>
+          </div>
         </form>
       </field>
     </record>
